src/objects/Offer_Incentive_Dynamic_Configuration__c.object
<CustomObject>
    <description>Offer Incentive Dynamic Configuration - 
Dynamic Qualification Rule
Dynamic Value Rule
Dynamic Treatment Rule
     Viewable channel
     Redemption channel
     Delivery channel 
     Booking channel 
     Booking Phone 
     Blackout dates</description>
    <fields>
        <fullName>Condition__c</fullName>
        <description>Condition for dynamic configuration.</description>
        <inlineHelpText>Condition for dynamic configuration
Use comma to separate multiple values</inlineHelpText>
        <label>Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Category__c</fullName>
        <description>Offer Incentive Dynamic Configuration Category</description>
        <inlineHelpText>Offer Incentive Dynamic Configuration Category</inlineHelpText>
        <label>Configuration Category</label>
        <picklist>
            <picklistValues>
                <fullName>Qualification Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment Rule</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Subcategory__c</fullName>
        <description>Offer Incentive Dynamic Configuration Subcategory</description>
        <inlineHelpText>Offer Incentive Dynamic Configuration Subcategory</inlineHelpText>
        <label>Configuration Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>Viewable Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redemption Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackout Dates</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Configuration_Type__c</fullName>
        <formula>&apos;&apos; + text(Configuration_Category__c)  + &apos; &apos; +  IF(isblank(text(Configuration_Subcategory__c)), &apos;&apos;, ( &apos; (&apos; + text(Configuration_Subcategory__c)+ &apos;)&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If check, this rule will be applied as default. The condition in this rule will be ignored</description>
        <inlineHelpText>If check, this rule will be applied as default. The condition in this rule will be ignored</inlineHelpText>
        <label>Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <description>Factor to calculate Value</description>
        <inlineHelpText>Factor to calculate Value</inlineHelpText>
        <label>Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>Function used to calculate the value</description>
        <inlineHelpText>Function used to calculate the value</inlineHelpText>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subtraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guest_Attribute_Base__c</fullName>
        <description>Guest Attribute Base</description>
        <globalPicklist>Guest_Attribute_Base</globalPicklist>
        <inlineHelpText>Guest Attribute Base</inlineHelpText>
        <label>Guest Attribute Base</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <formula>If (Default__c, &apos;DEFAULT&apos;, 

IF( ISBLANK( Text(Function__c)  ) , ( &apos; &apos; + TEXT(Guest_Attribute_Base__c)  + &apos; &apos; +  TEXT(Operator__c) + &apos; &apos; + Condition__c ), ( &apos; &apos; +  TEXT(Factor__c)  + &apos; &apos; +  Text(Function__c)  + &apos; &apos; +  TEXT(Guest_Attribute_Base__c)  ))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Value__c</fullName>
        <label>Max Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Value__c</fullName>
        <label>Min Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive__c</fullName>
        <description>Offer Incentive</description>
        <inlineHelpText>Offer Incentive</inlineHelpText>
        <label>Offer Incentive</label>
        <referenceTo>Offer_Incentive__c</referenceTo>
        <relationshipLabel>Offer Incentive Dynamic Configuration</relationshipLabel>
        <relationshipName>Offer_Incentive_Dynamic_Configuration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Operator used for dynamic configuration</description>
        <inlineHelpText>Operator used for dynamic configuration</inlineHelpText>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Greater Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smaller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smaller Than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Higher the number, the higher priority on this rule</description>
        <inlineHelpText>Higher the number, the higher priority on this rule</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing__c</fullName>
        <label>Testing</label>
        <picklist>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Rule_Type__c</fullName>
        <label>Value Rule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewable_Channel__c</fullName>
        <globalPicklist>Viewable_Channel</globalPicklist>
        <label>Viewable Channel</label>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Offer Incentive Dynamic Configuration</label>
    <nameField>
        <displayFormat>OID-{0000000000}</displayFormat>
        <label>Configuration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentive Dynamic Configuration</pluralLabel>
    <recordTypes>
        <fullName>Qualification_Rule</fullName>
        <active>true</active>
        <description>Optional rules to qualify if the customer is qualified for the incentive</description>
        <label>2. Qualification Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Blackout_Date</fullName>
        <active>true</active>
        <description>Optional Treatment Rule - Blackout Date</description>
        <label>3. Treatment Rule - Blackout Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Booking_Phone</fullName>
        <active>true</active>
        <description>Optional Treatment Rule - Booking Phone</description>
        <label>3. Treatment Rule - Booking Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Booking_channel</fullName>
        <active>true</active>
        <description>Optional Treatment Rule - Booking channel</description>
        <label>3. Treatment Rule - Booking channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Communication_channel</fullName>
        <active>true</active>
        <description>Optional Treatment Rule - Communication channel</description>
        <label>3. Treatment Rule - Communication channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Redemption_channel</fullName>
        <active>true</active>
        <description>Optional Treatment Rule - Redemption channel</description>
        <label>3. Treatment Rule - Redemption channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Rule_Viewable_channel</fullName>
        <active>true</active>
        <description>Treatment Rule - Viewable channel</description>
        <label>3. Treatment Rule - Viewable channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value_Rule</fullName>
        <active>true</active>
        <description>Required rules to identify the value of this incentive</description>
        <label>1. Value Rule</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>